test/data/semantic/bad/struct_pattern_arity_mismatch.coy
struct S(i64);

fn main() -> () {
    let x = S(1);

    let S(a, b) = x;

    ()
}
